@@ -855,7 +855,7 @@ LISPFUNNF(double_float_p,1)
 LISPFUNNF(long_float_p,1)
 LISPFUNNF(realp,1)
 LISPFUNNF(complexp,1)
-LISPFUNNF(streamp,1)
+LISPFUNNR(streamp,1)
 LISPFUNNF(built_in_stream_p,1)
 LISPFUNNF(random_state_p,1)
 LISPFUNNF(readtablep,1)
