@@ -1,5 +1,10 @@
 2005-01-22  Bruno Haible  <bruno@clisp.org>
 
+	* stream.d (streamp): Change seclass from seclass-foldable to
+	seclass-read.
+
+2005-01-22  Bruno Haible  <bruno@clisp.org>
+
 	* init.lisp: Export the type ext:global-symbol-macro.
 
 2005-01-22  Bruno Haible  <bruno@clisp.org>
